--- a/reveal-custom/css/fragments.scss
+++ b/reveal-custom/css/fragments.scss
@@ -22,30 +22,26 @@
     }
   }
 
-  .fragment.neon {
-    &.visible {
-      &.current-fragment {
-        @keyframes neon-blink-animation {
-          0% {text-shadow: none;}
-          40% {text-shadow: none;}
-          50% {
-            text-shadow:
-                    0 0 7px #fff,
-                    0 0 10px #fff,
-                    0 0 21px #fff,
-                    0 0 42px #0fa,
-                    0 0 82px #0fa,
-                    0 0 92px #0fa,
-                    0 0 102px #0fa,
-                    0 0 151px #0fa;
-          }
-
-          60% {text-shadow: none;}
-          100% {text-shadow: none;}
-        }
-        animation: neon-blink-animation 1s infinite;
+  .neon {
+    @keyframes neon-blink-animation {
+      0% {text-shadow: none;}
+      40% {text-shadow: none;}
+      50% {
+        text-shadow:
+                0 0 7px #fff,
+                0 0 10px #fff,
+                0 0 21px #fff,
+                0 0 42px #0fa,
+                0 0 82px #0fa,
+                0 0 92px #0fa,
+                0 0 102px #0fa,
+                0 0 151px #0fa;
       }
+
+      60% {text-shadow: none;}
+      100% {text-shadow: none;}
     }
+    animation: neon-blink-animation 1s infinite;
   }
 
   /* Sliding underline animation by Josh Broton, see http://bradsknutson.com/blog/css-sliding-underline/   */
