--- a/reveal-custom/plugins/menu/menu.css
+++ b/reveal-custom/plugins/menu/menu.css
@@ -11,7 +11,7 @@
     top: 0;
     width: 300px;
     height: 100%;
-    overflow-y: auto;
+    overflow-y: hidden;
     transition: transform 0.3s ease;
     font-size: 16px;
     font-weight: normal;
@@ -161,7 +161,7 @@
  */
 .slide-menu-wrapper .slide-menu-panel {
     display: none;
-    height: calc(100% - 60px);
+    height: calc(100% - 100px);
     overflow-x: hidden;
     overflow-y: auto;
     padding: 20px;
